<resources>
    <string name="app_name">homework4</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_contacts_please_add">No contacts. Please add</string>
    <string name="add">Add</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="search_contacts">Search contacts</string>
    <string name="some_name">Some name</string>
    <string name="contact">contact</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="edit_contact">Edit contact</string>
    <string name="remove">Remove</string>
    <string name="number">Number</string>
</resources>